load("@npm//:defs.bzl", "npm_link_all_packages")
load("//dev:defs.bzl", "ts_project")

# TODO(bazel): remove when no longer generated into src
# gazelle:exclude **/*.scss.d.ts

# gazelle:aspect_js_resolve **/*.scss :module_style_typings

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "vscode",
    srcs = [
        "code-intel-extensions.json",
        "package.json",
        "src/backend/authenticatedUser.ts",
        "src/backend/blobContent.ts",
        "src/backend/eventLogger.ts",
        "src/backend/fetch.ts",
        "src/backend/files.ts",
        "src/backend/instanceVersion.ts",
        "src/backend/node-fetch-fake-for-browser.ts",
        "src/backend/proxy-agent-fake-for-browser.ts",
        "src/backend/repositoryMetadata.ts",
        "src/backend/requestGraphQl.ts",
        "src/backend/searchContexts.ts",
        "src/backend/sourcegraphSettings.ts",
        "src/backend/streamSearch.ts",
        "src/code-intel/SourcegraphDefinitionProvider.ts",
        "src/code-intel/SourcegraphHoverProvider.ts",
        "src/code-intel/SourcegraphReferenceProvider.ts",
        "src/code-intel/initialize.ts",
        "src/code-intel/languages.ts",
        "src/code-intel/location.ts",
        "src/commands/browserActionsNode.ts",
        "src/commands/browserActionsWeb.ts",
        "src/commands/git-helpers.ts",
        "src/commands/initialize.ts",
        "src/common/links.ts",
        "src/contract.ts",
        "src/extension.ts",
        "src/file-system/FileTree.ts",
        "src/file-system/FilesTreeDataProvider.ts",
        "src/file-system/SourcegraphFileSystemProvider.ts",
        "src/file-system/SourcegraphUri.ts",
        "src/file-system/commands.ts",
        "src/file-system/initialize.ts",
        "src/graphql-operations.ts",
        "src/log.ts",
        "src/settings/LocalStorageService.ts",
        "src/settings/accessTokenSetting.ts",
        "src/settings/displayWarnings.ts",
        "src/settings/endpointSetting.ts",
        "src/settings/invalidation.ts",
        "src/settings/readConfiguration.ts",
        "src/settings/recommendations.ts",
        "src/settings/uninstall.ts",
        "src/state.ts",
        "src/vsCodeApi.ts",
        "src/webview/comlink/extensionEndpoint.ts",
        "src/webview/comlink/index.ts",
        "src/webview/comlink/webviewEndpoint.ts",
        "src/webview/commands.ts",
        "src/webview/initialize.ts",
        "src/webview/platform/AuthProvider.ts",
        "src/webview/platform/EventLogger.ts",
        "src/webview/platform/context.ts",
        "src/webview/platform/polyfills/index.ts",
        "src/webview/platform/polyfills/polyfill.ts",
        "src/webview/platform/telemetryService.ts",
        "src/webview/search-panel/MatchHandlersContext.ts",
        "src/webview/search-panel/RepoView.tsx",
        "src/webview/search-panel/SearchHomeView.tsx",
        "src/webview/search-panel/SearchResultsView.tsx",
        "src/webview/search-panel/alias/CommitSearchResult.tsx",
        "src/webview/search-panel/alias/FileMatchChildren.tsx",
        "src/webview/search-panel/alias/ModalVideo.tsx",
        "src/webview/search-panel/alias/RepoFileLink.tsx",
        "src/webview/search-panel/alias/RepoSearchResult.tsx",
        "src/webview/search-panel/alias/SymbolSearchResult.tsx",
        "src/webview/search-panel/alias/fetchSearchContext.ts",
        "src/webview/search-panel/api.ts",
        "src/webview/search-panel/components/BrandHeader.tsx",
        "src/webview/search-panel/components/ButtonDropdownCta.tsx",
        "src/webview/search-panel/components/HomeFooter.tsx",
        "src/webview/search-panel/components/SavedSearchForm.tsx",
        "src/webview/search-panel/components/SearchExamples.tsx",
        "src/webview/search-panel/components/SearchResultsInfoBar.tsx",
        "src/webview/search-panel/components/icons.tsx",
        "src/webview/search-panel/index.tsx",
        "src/webview/sidebars/auth/AuthSidebarView.tsx",
        "src/webview/sidebars/help/HelpSidebarView.tsx",
        "src/webview/sidebars/help/index.tsx",
        "src/webview/sidebars/history/HistorySidebarView.tsx",
        "src/webview/sidebars/history/components/RecentFilesSection.tsx",
        "src/webview/sidebars/history/components/RecentRepositoriesSection.tsx",
        "src/webview/sidebars/history/components/RecentSearchesSection.tsx",
        "src/webview/sidebars/history/components/SavedSearchesSection.tsx",
        "src/webview/sidebars/search/ContextInvalidatedSidebarView.tsx",
        "src/webview/sidebars/search/SearchSidebarView.tsx",
        "src/webview/sidebars/search/api.ts",
        "src/webview/sidebars/search/extension-host/index.ts",
        "src/webview/sidebars/search/extension-host/main.worker.ts",
        "src/webview/sidebars/search/extension-host/worker.ts",
        "src/webview/sidebars/search/index.tsx",
        "src/webview/theming/monacoTheme.ts",
        "src/webview/theming/sourcegraphTheme.ts",
    ],
    deps = [
        ":module_style_typings",
        "//:node_modules/@mdi/js",
        "//:node_modules/@reach/visually-hidden",
        "//:node_modules/@sourcegraph/branded",
        "//:node_modules/@sourcegraph/common",
        "//:node_modules/@sourcegraph/http-client",
        "//:node_modules/@sourcegraph/search",
        "//:node_modules/@sourcegraph/search-ui",
        "//:node_modules/@sourcegraph/shared",
        "//:node_modules/@sourcegraph/wildcard",
        "//:node_modules/@types/classnames",
        "//:node_modules/@types/lodash",
        "//:node_modules/@types/node",
        "//:node_modules/@types/node-fetch",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-router",
        "//:node_modules/@types/uuid",
        "//:node_modules/@vscode/webview-ui-toolkit",
        "//:node_modules/classnames",
        "//:node_modules/comlink",
        "//:node_modules/core-js",
        "//:node_modules/execa",
        "//:node_modules/graphql",
        "//:node_modules/http-proxy-agent",
        "//:node_modules/https-proxy-agent",
        "//:node_modules/lodash",
        "//:node_modules/mdi-react",
        "//:node_modules/monaco-editor",
        "//:node_modules/node-fetch",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/react-router",
        "//:node_modules/react-router-dom-v5-compat",
        "//:node_modules/rxjs",
        "//:node_modules/use-deep-compare-effect",
        "//:node_modules/uuid",
        "//:node_modules/zustand",
    ],
)

ts_project(
    name = "vscode_tests",
    testonly = True,
    srcs = [
        "tests/context.ts",
        "tests/getWebview.ts",
        "tests/graphql.ts",
        "tests/installExtension.ts",
        "tests/launch.ts",
        "tests/vsce.test.ts",
    ],
    deps = [
        "//:node_modules/@sourcegraph/search",
        "//:node_modules/@sourcegraph/shared",
        "//:node_modules/@types/node",
        "//:node_modules/@types/puppeteer",
        "//:node_modules/@types/rimraf",
        "//:node_modules/@types/yauzl",
        "//:node_modules/@vscode/test-electron",
        "//:node_modules/puppeteer",
        "//:node_modules/rimraf",
        "//:node_modules/yauzl",
    ],
)
