load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")
load("//dev:defs.bzl", "ts_project")

# gazelle:aspect_js_test_files {aria-asserts.ts,mock*.{ts,tsx},jest*.{ts,tsx}}

js_binary(
    name = "generate_schema",
    data = [
        "//:node_modules/json-schema-to-typescript",
        "//:node_modules/mz",
    ],
    entry_point = "generateSchema.js",
    visibility = ["//client/shared:__pkg__"],
)

js_binary(
    name = "generate_graphql_schema",
    data = [
        "//:node_modules/@gql2ts/from-schema",
        "//:node_modules/@gql2ts/language-typescript",
        "//:node_modules/glob",
        "//:node_modules/graphql",
        "//:node_modules/mz",
        "//:node_modules/prettier",
        "//:prettier_config_js",
        "//cmd/frontend/graphqlbackend:graphql_schema",
    ],
    entry_point = "generateGraphQlSchema.js",
    visibility = ["//client/shared:__pkg__"],
)

js_library(
    name = "extract_graphql_operation_codegen_plugin",
    srcs = [
        "extractGraphQlOperationCodegenPlugin.js",
    ],
    deps = [
        "//:node_modules/graphql",
        "//:node_modules/signale",
    ],
)

js_binary(
    name = "generate_graphql_operations",
    data = [
        ":extract_graphql_operation_codegen_plugin",
        "//:node_modules/@graphql-codegen/cli",
        "//:node_modules/@graphql-codegen/typescript",
        "//:node_modules/@graphql-codegen/typescript-apollo-client-helpers",
        "//:node_modules/@graphql-codegen/typescript-operations",
        "//:node_modules/prettier",
        "//cmd/frontend/graphqlbackend:graphql_schema",
    ],
    entry_point = "generateGraphQlOperations.js",
    visibility = ["//client:__subpackages__"],
)

ts_project(
    name = "dev_tests",
    testonly = True,
    srcs = [
        "mockDomRect.ts",
        "mockMatchMedia.ts",
        "mockReactVisibilitySensor.tsx",
        "mockResizeObserver.ts",
        "mockSentryBrowser.ts",
        "mockUniqueId.ts",
    ],
    deps = [
        "//:node_modules/@sentry/browser",
        "//:node_modules/@types/react",
        "//:node_modules/react",
        "//:node_modules/react-visibility-sensor",  #keep
        "//:node_modules/resize-observer-polyfill",
    ],
)
